--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@ lib_deps =
     bblanchon/ArduinoJson @ ^7.0.0
     ayushsharma82/ElegantOTA @ ^3.1.0
     https://github.com/forkineye/ESPAsyncE131
+    adafruit/Adafruit PWM Servo Driver Library @ ^3.0.2
 
 lib_ignore =
     AsyncTCP_RP2040W
